# vtl

./: CMakeLists.txt  README.md  VTL_diagram.drawio  main.c
VTL/: VTL_app_result.h
VTL/content_platform/: CMakeLists.txt
VTL/content_platform/infra/text/: VTL_text_configs_for_gen_init.c
VTL/content_platform/tg/: VTL_content_platform_tg_net.c
VTL/media_container/: CMakeLists.txt
VTL/media_container/img/: CMakeLists.txt  VTL_img_core.c  VTL_img_core.h
VTL/publication/: CMakeLists.txt  VTL_publication.c
VTL/publication/text/: VTL_publication_markup_text_flags_check.c  VTL_publication_text_op.c
VTL/publication/text/asciidoc/: CMakeLists.txt  VTL_publication_text_op_asciidoc.c  VTL_publication_text_op_asciidoc_scan.c
VTL/publication/text/asciidoc/infra/: VTL_publication_text_op_asciidoc_load.c
VTL/publication/text/infra/: VTL_publication_text_read.c  VTL_publication_text_write.c
VTL/user/: CMakeLists.txt
VTL/user/history/: VTL_user_history_data.c  VTL_user_history_data.h
VTL/utils/: CMakeLists.txt  VTL_file.c  VTL_time.c
VTL/utils/curl/: VTL_http_client.c
cmake/: Dependencies.cmake  FFmpeg.cmake
external_sources/parson/: CMakeLists.txt
